--- a/community/index.html
+++ b/community/index.html
@@ -73,14 +73,85 @@
             </div>
             </noscript>
 
-            <div id="main" role="main" class="clearfix controller-Minecraft action-play">
+            <div id="main" role="main" class="clearfix controller-Site action-community">
                 
 <section class="left">
-    <h1>Minecraft</h1>
-        <p>
-        Please <a href="/login" >log in</a> or <a href="/register" >register for a Mojang account</a> to play Minecraft.
+    <h1>Community</h1>
+    <p>
+        Here are some active Minecraft resources. Unfortunately, we don't have room to include every community website that gets suggested to us, but if you'd like to submit yours for consideration,
+        please email <a href="mailto:communityrequests@mojang.com">communityrequests@mojang.com</a> with as much information as possible.
     </p>
-        </section>            </div>
+    <p>
+        If you're having issues getting Minecraft to work, please visit our <a href="https://help.mojang.com/">Support Center</a>.
+    </p>
+    <h2>Official Resources</h2>
+    <ul>
+        <li><a href="https://twitter.com/#!/jeb_">@jeb_</a> &ndash; Jeb is the lead developer of Minecraft, follow him! <a href="https://twitter.com/kappische/mojang/members">The rest of the Mojang team</a> are pretty great too.</li>
+        <li><a href="https://www.facebook.com/minecraft">Facebook</a> &ndash; Join our community on Facebook</li>
+        <li><a href="http://www.minecraftforum.net/index.php">Minecraft forums</a> &ndash; A great place to talk Minecraft with fans.</li>
+        <li><a href="http://www.minecraftwiki.net/wiki/Minecraft_Wiki">Minecraft wiki</a> &ndash; Learn anything and everything about Minecraft</li>
+    </ul>
+    <h2>iOS Apps</h2>
+    <p>
+        Pocket Edition is great, but what if you want even more Minecraft on your iOS device?
+    </p>
+    <ul>
+        <li><a href="http://itunes.apple.com/ng/app/minecraft-explorer-pro/id449354665">Minecraft Explorer Pro</a> &ndash; The official reference guide for players on all platforms. Learn about items, search for servers, discuss Minecraft, and more...</li>
+        <li><a href="http://itunes.apple.com/ng/app/seeds-for-minecraft/id528919633">Minecraft Seeds Pro</a> &ndash; Find the best seeds as hand-picked by the community. Supports all versions of the game</li>
+        <li><a href="http://www.minecraftskinstudio.com/">Minecraft Skin Studio</a> &ndash; Design, upload, and rate skins for the PC/Mac version of Minecraft. There's a massive library already waiting</li>
+        <li><a href="https://itunes.apple.com/gb/app/minecraft-reality/id577991556?mt=8">Minecraft Reality</a> &ndash; Place your creations in real world locations and view them through your iOS device, thanks to 13th Lab's wonder-tech. Truly impressive stuff</li>
+        <li><a href="http://www.minecraftpapercraftstudio.com/">Minecraft Papercraft Studio</a> &ndash; Make real world 3D models from your favorite Minecraft characters. Arts and crafts has never been this much fun!</li>
+    </ul>
+    <h2>Forums and Communities</h2>
+    <ul>
+        <li><a href="https://minebook.me">Minebook</a> &ndash; The Minecraft social network</li>
+        <li><a href="http://steamcommunity.com/groups/MinecraftCommunity">Minecraft Community on Steam</a></li>
+        <li><a href="http://www.reddit.com/r/Minecraft">Minecraft on Reddit</a></li>
+        <li><a href="http://crafthub.net/">CraftHub</a></li>
+        <li><a href="http://www.worldofminecraft.com/">World of Minecraft</a></li>
+        <li><a href="http://www.moddb.com/games/minecraft/">Minecraft on Mod DB</a></li>
+        <li><a href="http://minecrafting.ru/">Minecrafting.ru</a> &ndash; A Russian forum</li>
+        <li><a href="http://minecraft-esp.com/">Minecraft forum</a> &ndash; A Spanish forum</li>
+        <li><a href="http://minecraftwb.com/">Minecraft Workbench</a> &ndash; Texture packs, mods and skins</li>
+        <li><a href="http://minecraft.fr/">Minecraft.fr</a> &ndash; A French Minecraft site, potato cubes!</li>
+        <li><a href="http://minecraftfr.com/">Minecraftfr.com</a> &ndash; Another French Minecraft community.</li>
+        <li><a href="http://www.minecraft-france.fr/">Minecraft-France</a> &ndash; French Minecraft community.</li>
+        <li><a href="http://www.minecraftforum.nl/">Nederlands Minecraft forum</a> &ndash; Dutch Minecraft community.</li>
+        <li><a href="http://www.mcbbs.net/forum.php">mcbbs.net</a> &ndash; One of the biggest Chinese Minecraft communities.</li>
+        <li><a href="http://minecraft-hk.com">minecraft-hk.com</a> &ndash; Hong Kong Minecraft community and forums.</li>
+        <li><a href="http://www.minecraft-romania.com/">minecraft-romania.com</a> &ndash; Romanian Minecraft community.</li>
+    </ul>
+    <h2>Galleries dedicated to Minecraft</h2>
+    <ul>
+        <li><a href="http://minecraftmuseum.net/">The Minecraft Museum</a></li>
+        <li><a href="http://minecraftgallery.com/">Minecraft Gallery</a></li>
+    </ul>
+    <h2>IRC</h2>
+    <ul>
+        <li><a href="irc://irc.esper.net/minecraft/">#minecraft on irc.esper.net</a> &ndash; It's an IRC channel!</li>
+        <li><a href="irc://irc.esper.net/MineCraftHelp/">#MineCraftHelp on irc.esper.net</a> &ndash; Help and support from community members.</li>
+        <li><a href="irc://irc.esper.net/mcchatter/">#mcchatter on irc.esper.net</a> &ndash; For general community chatter.</li>
+    </ul>
+    <h2>Indie game development</h2>
+    <p>
+        Want to learn about indie game development?
+    </p>
+    <ul>
+        <li><a href="http://www.tigsource.com/">TIGSource</a> &ndash; Lots of talent! Minecraft originated here.</li>
+        <li><a href="http://www.javagaming.org/">JavaGaming.org</a> &ndash; Other java game developers.</li>
+        <li><a href="http://indiegames.com/">Indie Games</a> &ndash; The blog is awesome, and so is the podcast.</li>
+        <li><a href="http://ludumdare.com/">Ludum Dare</a> &ndash; A 48 hour game development competition.</li>
+    </ul>
+    <h2>Notch's buddies</h2>
+    <ul>
+        <li><a href="http://www.farmfortress.com/">Farm Fortress dev blog</a></li>
+        <li><a href="http://www.increpare.com/">increpare games</a></li>
+        <li><a href="http://www.devm-games.com/">DEVM-Games</a></li>
+        <li><a href="http://www.wurmonline.com/">Wurm Online</a></li>
+        <li><a href="http://www.distractionware.com/">distractionware</a></li>
+    </ul>
+</section>
+            </div>
         </div>
 
         <footer>
@@ -98,7 +169,7 @@
         <script>
             var recipient = 'https://account.minecraft.net';
             var loadMessageFrame = function() {
-                    $('<iframe>', {id : 'ssoFrame', src : recipient + '/message/MjdiYmRkMDQtNDYzNi00Yjc2LTlmZmItZDlkYTBjNTA0NTY5%0D%0A', frameborder : 0}).appendTo($('body'));
+                    $('<iframe>', {id : 'ssoFrame', src : recipient + '/message/YjZmZjM4Y2ItMGM4Ni00OTc2LTllZDQtMzE3Y2M1YjUxMWE2%0D%0A', frameborder : 0}).appendTo($('body'));
             } 
 
             if (Modernizr.postmessage) {
